--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{title}}</title>
-  </head>
+    {{> head}}
   <body>
+    {{> navbar}}
     {{> header}}
     <p>
-      Some text here
+      Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
     </p>
     {{> footer}}
   </body>
