--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,10 +3,45 @@
     {{> head}}
   <body>
     {{> navbar}}
-    {{> header}}
-    <p>
-      Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
-    </p>
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-md-7">
+          <h1 class="display-4">Computer Not Working?</h1>
+          <p class="lead">Is your computer running slow? or maybe not at all? Call us for a quick and easy quote</p>
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Read more</a>
+          </p>
+        </div>
+        <div class="col-md-5">
+          <img src="images/mouse.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card-deck">
+        <div class="card text-white bg-danger mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Hardware Problems?</h5>
+            <p class="card-text">Like you, I used to think the world was this great place where everybody lived by the same standards I did, then some kid with a nail showed me I was living in his world, a world where chaos rules not order, a world where righteousness is not rewarded. That's Cesar's world, and if you're not willing to play by his rules, then you're gonna have to pay the price.</p>
+          </div>
+        </div>
+        <div class="card text-white bg-warning mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Software Problems?</h5>
+            <p class="card-text">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
+          </div>
+        </div>
+        <div class="card text-white bg-info mb-3">
+          <div class="card-body">
+            <h5 class="card-title">PC Tune Up</h5>
+            <p class="card-text">You see? It's curious. Ted did figure it out - time travel. And when we get back, we gonna tell everyone. How it's possible, how it's done, what the dangers are. But then why fifty years in the future when the spacecraft encounters a black hole does the computer call it an 'unknown entry event'? Why don't they know? If they don't know, that means we never told anyone. And if we never told anyone it means we never made it back. Hence we die down here. Just as a matter of deductive logic.</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+    <hr class="my-4">
     {{> footer}}
   </body>
 </html>
