--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -4,9 +4,21 @@
   <body>
     {{> navbar}}
     {{> header}}
-    <p>
-      Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.
-    </p>
+    <form method="post" action="contact/send">
+      <div class="form-group">
+        <label for="nameField">Name</label>
+        <input type="text" class="form-control" id="nameField" placeholder="Enter your name" name="name">
+      </div>
+      <div class="form-group">
+        <label for="emailField">Email address</label>
+        <input type="email" class="form-control" id="emailField" placeholder="Enter email" name="email">
+      </div>
+      <div class="form-group">
+        <label for="messageField">Message</label>
+        <textarea class="form-control" id="messageField" placeholder="Enter message" name="message" rows="3"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
     {{> footer}}
   </body>
 </html>
